fixed vertical scroll issue on Safari

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,6 +46,7 @@ body {
    font-family: 'Noto Sans', sans-serif;
    font-weight: 400;
    width: 100vw;
+   height: 100%;
    height: 100dvh;
    min-height: 0;
    overflow: hidden;
